--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('//fonts.googleapis.com/css?family=Quicksand"');
+@import url('//fonts.googleapis.com/css?family=Quicksand');
 
 button{
   background-color: #27150c;
@@ -27,12 +27,12 @@ html, body {
 
 
 .title{
-	font-family: 'Quicksand';
+	font-family:'Quicksand', sans-serif;;
 	font-size: 60px;
 }
 
 h1{
-	font-family: 'Quicksand';
+	font-family:'Quicksand', sans-serif;';
 }
 
 /*.rounded{
