--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('//fonts.googleapis.com/css?family=Quicksand');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 button{
   background-color: #27150c;
