--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 button{
   background-color: #27150c;
-  color: black;
+  color: white;
   text-align: center;
   cursor: pointer;
   font-family: 'Quicksand';
