--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ h1{
 	font-family:'Quicksand', sans-serif;';
 	font-weight: bold
 }
+label{
+	font-family:'Quicksand', sans-serif;';
+	font-weight: bold
+}
 
 /*.rounded{
 	border-radius: 20px;
