--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,13 @@ html, body {
 
 .title{
 	font-family:'Quicksand', sans-serif;;
+	font-weight: bold
 	font-size: 60px;
 }
 
-h1{
+h2{
 	font-family:'Quicksand', sans-serif;';
-	font-weight: bold
+	font-size: 20px;
 }
 label{
 	font-family:'Quicksand', sans-serif;';
